src/step21/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuclaw
spec:
  selector:
    app: nuclaw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
